# fabric-webapp

./: fabric.applications.webapp.desktop.in  meson.build  meson.options  package.nix  sample.config.json
src/: gio_modules.vala.in  main.vala  meson.build
